Add student attendance list

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Attendance</title>
   </head>
   <body>
-
+    <h1>Attendance</h1>
+    <ul>
+      <li>Marvin the Martian</li>
+      <li>Matt Damon the Martian</li>
+      <li>Satsuki Kiryūin</li>
+      <li>Jubilee</li>
+      <li>Hilarious Klingon</li>
+    </ul>
   </body>
 </html>
